@@ -52,16 +52,16 @@ public class SmartlistService {
     User user = securityService.getCurrentUser();
 
     if (securityService.userHasFeatureAccessLevel(user.getId(), user.getCompanyId(), user.getHighestCompanyId(), "SMARTLIST", List.of("ADMIN", "VIEW_ALL"))) {
-      return sqlCache.query("smartlist.getAll", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), Smartlist.class);
+      return sqlCache.query("smartlist.getAll", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), new SmartlistMapper<>(Smartlist.class, om));
     } else {
-      return sqlCache.query("smartlist.getOwnAndShared", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), Smartlist.class);
+      return sqlCache.query("smartlist.getOwnAndShared", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), new SmartlistMapper<>(Smartlist.class, om));
     }
   }
 
   public Smartlist getSmartlist(Long id) {
     User user = securityService.getCurrentUser();
     final boolean canViewAll = securityService.userHasFeatureAccessLevel(user.getId(), user.getCompanyId(), user.getHighestCompanyId(), "SMARTLIST", List.of("VIEW_ALL"));
-    return sqlCache.get("smartlist.getById", Map.of("smartlistId", id, "companyId", user.getCompanyId(), "userId", user.getId(), "canViewAll", canViewAll), Smartlist.class).orElse(null);
+    return sqlCache.get("smartlist.getById", Map.of("smartlistId", id, "companyId", user.getCompanyId(), "userId", user.getId(), "canViewAll", canViewAll), new SmartlistMapper<>(Smartlist.class, om)).orElse(null);
   }
 
   public Smartlist addSmartlist(Smartlist smartlist) {
@@ -145,7 +145,7 @@ public class SmartlistService {
 
   public boolean isNameUnique(String name) {
     User user = securityService.getCurrentUser();
-    List<Smartlist> smartlists = sqlCache.query("smartlist.getAll", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), Smartlist.class);
+    List<Smartlist> smartlists = sqlCache.query("smartlist.getAll", Map.of("companyId", user.getCompanyId(), "userId", user.getId()), new SmartlistMapper<>(Smartlist.class, om));
     for (Smartlist s: smartlists) {
       if (s.getName().trim().toLowerCase().equals(name.trim().toLowerCase())) {
         return false;
@@ -240,6 +240,7 @@ public class SmartlistService {
     params.put("createdById", user.trueUserId());
     params.put("processStepId", assignment.getProcessStepId());
     params.put("projectDetailsColumn", assignment.getProjectDetailsColumn());
+    params.put("processStepEventId", assignment.getProcessStepEventId());
     Long assignmentId = sqlCache.updateReturningId("smartlist.addField", params, "id").longValue();
     return this.getAssignedFieldById(assignmentId);
   }
@@ -297,7 +298,7 @@ public class SmartlistService {
 
   public List<Smartlist> getSharedByType(Long objectTypeId) {
       User user = securityService.getCurrentUser();
-      return sqlCache.query("smartlist.getSharedByObjectType", Map.of("companyId", user.getCompanyId(), "objectTypeId", objectTypeId, "userId", user.getId()), Smartlist.class);
+      return sqlCache.query("smartlist.getSharedByObjectType", Map.of("companyId", user.getCompanyId(), "objectTypeId", objectTypeId, "userId", user.getId()), new SmartlistMapper<>(Smartlist.class, om));
   }
 
   @Transactional
@@ -348,7 +349,7 @@ public class SmartlistService {
     List<SmartlistFieldAssignment> fields = this.getAssignedFields(smartlistId);
     String query;
 
-    if (smartlist.getObjectTypeId() == 4) {
+    if (List.of(4L, 6L).contains(smartlist.getObjectTypeId())) {
       query = buildProcessStepSql(smartlist, fields);
     } else {
       query = (smartlist.isProjectDetails()) ? this.buildProjectDetailsSql(smartlist) : buildSql(smartlist, fields);
@@ -367,7 +368,7 @@ public class SmartlistService {
     List<SmartlistFieldAssignment> fields = this.getAssignedFields(smartlistId);
     String query;
 
-    if (smartlist.getObjectTypeId() == 4) {
+    if (List.of(4L, 6L).contains(smartlist.getObjectTypeId())) {
       query = buildProcessStepSql(smartlist, fields);
     } else {
       query = (smartlist.isProjectDetails()) ? this.buildProjectDetailsSql(smartlist) : buildSql(smartlist, fields, true );
@@ -397,8 +398,9 @@ public class SmartlistService {
           f.setName(f.getName().substring(0, 60) + "...");
         }
 
-        if (f.getObjectTypeId() == 4) {
-          final String append = String.format(" (%s)", f.getProcessStepId());
+        if (f.getObjectTypeId() == 4 || f.getObjectTypeId() == 6) {
+          final Long appendId = (f.getObjectTypeId() == 4) ? f.getProcessStepId() : f.getEventId();
+          final String append = String.format(" (%s)", appendId);
           if (f.getName().length() + append.length() > 63) {
             f.setName(f.getName().substring(0, f.getName().length() - append.length() - 3) + append + "...");
           } else {
@@ -412,10 +414,14 @@ public class SmartlistService {
     String query;
 
     //dont run the processStepSql if it is for a work queue list. i only put the work queue code into the buildSql funtion
-    if (smartlist.getObjectTypeId() == 4 && null == smartlist.getWorkQueueTypeId() && !smartlist.isProjectDetails()) {
+    if (List.of(4L, 6L).contains(smartlist.getObjectTypeId()) && null == smartlist.getWorkQueueTypeId() && !smartlist.isProjectDetails()) {
       query = buildProcessStepSql(smartlist, fields);
     } else {
-      query = (smartlist.isProjectDetails()) ? this.buildProjectDetailsSql(smartlist) : buildSql(smartlist, fields, timezone, null, false);
+      if (smartlist.getWorkQueueTypeId() != null && smartlist.getObjectTypeId() == 6L) {
+        query = buildWorkQueueSql(smartlist, fields, true);
+      } else {
+        query = (smartlist.isProjectDetails()) ? this.buildProjectDetailsSql(smartlist) : buildSql(smartlist, fields, timezone, null, false);
+      }
     }
 
     final List<Map<String, Object>> results = sqlCacheRO.queryBySql(query, null, new ColumnMapRowMapper());
@@ -423,7 +429,7 @@ public class SmartlistService {
     if (results.isEmpty()) {
       return writeEmptyCsv(fields);
     } else {
-      return writeCsv(results, fields, null != smartlist.getWorkQueueTypeId());
+      return writeCsv(results, fields, null != smartlist.getWorkQueueTypeId(), smartlist.getWorkQueueTypeId() != null && smartlist.getObjectTypeId() == 6L);
     }
   }
 
@@ -1011,6 +1017,22 @@ public class SmartlistService {
         }
 
         break;
+      case 6:
+        query.append(" from flow.project_process_step_event");
+        query.append(" left join flow.project_process_step on flow.project_process_step.id = flow.project_process_step_event.project_process_step_id ");
+        query.append(" left join flow.project on flow.project.id = flow.project_process_step.project_id ");
+        query.append(" left join flow.user_position \"project_user_position\" on \"project_user_position\".id = flow.project.user_position_id ");
+        query.append(" left join flow.user \"project_user\" on \"project_user\".id = \"project_user_position\".user_id ");
+        query.append(" inner join flow.company_project_status_type on flow.company_project_status_type.id = flow.project.company_project_status_type_id ");
+        query.append(" inner join flow.project_status_type on flow.project_status_type.id = flow.company_project_status_type.project_status_type_id ");
+        query.append(" left join flow.contact on flow.contact.id = flow.project.contact_id and flow.contact.archived is not true ");
+        query.append(" left join flow.user_position \"contact_user_position\" on \"contact_user_position\".id = flow.contact.owner_user_position_id ");
+        query.append(" left join flow.user \"contact_user\" on \"contact_user\".id = \"contact_user_position\".user_id ");
+        query.append(" left join flow.org on flow.org.id = \"project_user_position\".org_id ");
+
+        whereClause.append(" flow.project.archived is not true and ");
+        whereClause.append(String.format(" flow.company_project_status_type.company_id = any(%s) and ", companySubquery));
+        break;
       }
     } else {
       //this is all required for the work queue stuff
@@ -1228,10 +1250,6 @@ public class SmartlistService {
             }
             referenceLocation = (r.getSmartlistFieldId() == 1) ? String.format("\"%s\".id", referenceTable) : String.format("array[\"%s\".id]::int[]", referenceTable);
           } else if (r.getCustomFieldGroupAssignmentId() != null) {
-
-//              SmartlistQuery smartlistQuery = addCustomFieldRequirement(r, joinTables, smartlist);
-//
-//              query.append(smartlistQ)
 
             String referenceColumn;
             if (r.getHasListValues() != null && r.getHasListValues() && !r.getAllowMultiple()) {
@@ -1515,7 +1533,11 @@ public class SmartlistService {
     return query.toString();
   }
 
-  private String buildProcessStepSql(Smartlist smartlist, List<SmartlistFieldAssignment> fields) {
+  public String buildProcessStepSql(Smartlist smartlist, List<SmartlistFieldAssignment> fields) {
+    return buildProcessStepSql(smartlist, fields, null, false);
+  }
+
+  public String buildProcessStepSql(Smartlist smartlist, List<SmartlistFieldAssignment> fields, String timezone, Boolean useEventData) {
 
     final Long companyId = securityService.getCurrentUser().getCompanyId();
 
@@ -1554,6 +1576,7 @@ public class SmartlistService {
     projectsClause.append(" inner join flow.contact on flow.contact.id = flow.project.contact_id and flow.contact.archived is not true");
     projectsClause.append(" left join flow.user_position \"contact_user_position\" on \"contact_user_position\".id = flow.contact.owner_user_position_id");
     projectsClause.append(" left join flow.user \"contact_user\" on \"contact_user\".id = \"contact_user_position\".user_id");
+    projectsClause.append(" inner join flow.company_project_status_type on flow.company_project_status_type.id = flow.project.company_project_status_type_id");
 
     requirements.forEach(r -> {
 
@@ -1562,24 +1585,56 @@ public class SmartlistService {
       //join value tables for custom fields
       if (r.getCustomFieldSqlKey() == null && r.getCustomFieldGroupAssignmentId() != null) {
         r.setValueReferenceTable(UUID.randomUUID().toString());
+        r.setValueEventReferenceTable(UUID.randomUUID().toString());
 
         //join the value table for the respective field object type
         if (r.getObjectTypeId() == 1) {
-          projectsValueJoins.append(String.format(" left join flow.project_custom_field_value \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".custom_field_group_assignment_id = %s and \"%s\".archived is not true", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable()));
+          projectsValueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), "flow.project"));
         } else if (r.getObjectTypeId() == 2) {
-          projectsValueJoins.append(String.format(" left join flow.contact_custom_field_value \"%s\" on \"%s\".contact_id = flow.contact.id and \"%s\".custom_field_group_assignment_id = %s and \"%s\".archived is not true", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable()));
+          projectsValueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), "flow.contact"));
         } else if (r.getObjectTypeId() == 4) {
           r.setPpsTable(UUID.randomUUID().toString());
-          projectsValueJoins.append(String.format(" left join flow.project_process_step \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".process_step_id = %s and \"%s\".archived is not true", r.getPpsTable(), r.getPpsTable(), r.getPpsTable(), r.getProcessStepId(), r.getPpsTable()));
-          if (smartlist.isMainProcessSteps()) {
-            projectsValueJoins.append(String.format(" and \"%s\".main is true ", r.getPpsTable()));
+          projectsValueJoins.append(joinPpsTable(r.getPpsTable(), r.getProcessStepId(), smartlist.isMainProcessSteps()));
+          projectsValueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), r.getPpsTable()));
+        } else if (r.getObjectTypeId() == 6) {
+          // check if process step is already joined
+          if (projectsValueJoins.indexOf(".process_step_id = " + r.getProcessStepId()) != -1) {
+            // if the PS is already joined, use it
+            final String ppsTable = requirements.stream()
+                                                .filter(req -> Objects.equals(req.getProcessStepId(), r.getProcessStepId()))
+                                                .map(SmartlistRequirement::getPpsTable)
+                                                .findFirst()
+                                                .orElse(null);
+            r.setPpsTable(ppsTable);
+
+            // check if event is already joined
+            if (projectsValueJoins.indexOf(".process_step_event_id = " + r.getEventId()) != -1) {
+              // grab event table
+              final String ppsEventTable = requirements.stream()
+                                                       .filter(req -> Objects.equals(req.getEventId(), r.getEventId()))
+                                                       .map(SmartlistRequirement::getPpsEventTable)
+                                                       .findFirst()
+                                                       .orElse(null);
+              r.setPpsEventTable(ppsEventTable);
+            } else {
+              r.setPpsEventTable(UUID.randomUUID().toString());
+              query.append(joinPPsEventTable(r.getPpsEventTable(), r.getPpsTable(), r.getProcessStepEventId()));
+            }
+          } else {
+            //join pps and ppse tables
+            r.setPpsTable(UUID.randomUUID().toString());
+            r.setPpsEventTable(UUID.randomUUID().toString());
+            projectsValueJoins.append(joinPpsTable(r.getPpsTable(), r.getProcessStepId(), smartlist.isMainProcessSteps()));
+            projectsValueJoins.append(joinPPsEventTable(r.getPpsEventTable(), r.getPpsTable(), r.getProcessStepEventId()));
           }
-          projectsValueJoins.append(String.format(" left join flow.project_process_step_custom_field_value \"%s\" on \"%s\".project_process_step_id = \"%s\".id and \"%s\".custom_field_group_assignment_id = %s and \"%s\".archived is not true", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getPpsTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable()));
+
+          // join pps event value table
+          projectsValueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueEventReferenceTable(), r.getPpsEventTable()));
         }
       }
 
       if (r.getSmartlistSystemListId() != null) {
-        //smartlist system list
+        //smartlist system lists
         if (List.of(1L, 3L, 5L).contains(r.getSmartlistSystemListId())) {
             referenceLocation = String.format("array[%s.%s]::int[]", r.getJoinTable(), r.getJoinColumn());
         } else if (r.getSmartlistSystemListId() == 2 || r.getSmartlistSystemListId() == 4) {
@@ -1598,34 +1653,110 @@ public class SmartlistService {
           referenceLocation = String.format("array[\"%s\".%s]::int[]", processStepStatusTable, column);
         }
       } else if (r.getSmartlistFieldId() != null) {
-        //smartlist field
+        //smartlist (system) fields
         if (r.getObjectTypeId() == 1 || r.getObjectTypeId() == 2) {
           referenceLocation = r.getReferenceTable() + "." + r.getReferenceColumn();
         } else if (r.getObjectTypeId() == 4) {
 
-          r.setPpsTable(UUID.randomUUID().toString());
-          String joinTable = r.getPpsTable();
-          String joinColumn = r.getReferenceColumn();
-          projectsValueJoins.append(String.format(" left join flow.project_process_step \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".process_step_id = %s and \"%s\".archived is not true", r.getPpsTable(), r.getPpsTable(), r.getPpsTable(), r.getProcessStepId(), r.getPpsTable()));
-          if (smartlist.isMainProcessSteps()) {
-            projectsValueJoins.append(String.format(" and \"%s\".main is true ", r.getPpsTable()));
+          // check if process step is already joined
+          if (projectsValueJoins.indexOf(".process_step_id = " + r.getProcessStepId()) != -1) {
+            // if the PS is already joined, use it
+            final String ppsTable = requirements.stream()
+              .filter(req -> req.getProcessStepId().equals(r.getProcessStepId()))
+              .map(SmartlistRequirement::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            //@TODO: I believe a join happening here is a bug. Test when able
+//            projectsValueJoins.append(joinPpsTable(ppsTable, r.getProcessStepId(), smartlist.isMainProcessSteps()));
+            r.setPpsTable(ppsTable);
+          } else {
+            r.setPpsTable(UUID.randomUUID().toString());
           }
 
+          String joinTable = r.getPpsTable();
+          String joinColumn = r.getReferenceColumn();
+          projectsValueJoins.append(joinPpsTable(r.getPpsTable(), r.getProcessStepId(), smartlist.isMainProcessSteps()));
+
           if (Objects.equals(r.getReferenceTable(), "flow.process_step")) {
+            // process step name system field
             r.setValueReferenceTable(UUID.randomUUID().toString());
             projectsValueJoins.append(String.format(" left join flow.process_step \"%s\" on \"%s\".id = \"%s\".process_step_id", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getPpsTable()));
             joinTable = r.getValueReferenceTable();
           } else if (r.getReferenceTable().equals("flow.user")) {
+            // process step owner system field
             // Since this is a process step smartlist field, if it's looking at the user table, it's the process step owner field
             joinColumn = "user_position_id";
           }
 
           referenceLocation = String.format("\"%s\".%s", joinTable, joinColumn);
+        } else if (r.getObjectTypeId() == 6) {
+          // check if process step is already joined
+          if (projectsValueJoins.indexOf(".process_step_id = " + r.getProcessStepId()) != -1) {
+            // if the PS is already joined, use it
+            final String ppsTable = requirements.stream()
+              .filter(req -> req.getProcessStepId().equals(r.getProcessStepId()))
+              .map(SmartlistRequirement::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            r.setPpsTable(ppsTable);
+
+            // check if event is already joined
+            if (projectsValueJoins.indexOf(".process_step_event_id = " + r.getEventId()) != -1) {
+              // grab event table
+              final String ppsEventTable = requirements.stream()
+                .filter(req -> req.getEventId().equals(r.getEventId()))
+                .map(SmartlistRequirement::getPpsEventTable)
+                .findFirst()
+                .orElse(null);
+              r.setPpsEventTable(ppsEventTable);
+            } else {
+              r.setPpsEventTable(UUID.randomUUID().toString());
+              projectsValueJoins.append(joinPPsEventTable(r.getPpsEventTable(), r.getPpsTable(), r.getProcessStepEventId()));
+            }
+          } else {
+            r.setPpsTable(UUID.randomUUID().toString());
+            r.setPpsEventTable(UUID.randomUUID().toString());
+            //join pps and ppse tables
+            projectsValueJoins.append(joinPpsTable(r.getPpsTable(), r.getProcessStepId(), smartlist.isMainProcessSteps()));
+            projectsValueJoins.append(joinPPsEventTable(r.getPpsEventTable(), r.getPpsTable(), r.getProcessStepEventId()));
+          }
+
+          //next determine referenceLocation
+          String joinTable = r.getPpsEventTable();
+          String joinColumn = r.getReferenceColumn();
+
+          if (Objects.equals(r.getReferenceTable(), "flow.event")) {
+            //event name system field
+            r.setValueReferenceTable(UUID.randomUUID().toString());
+
+            final String pseTable = UUID.randomUUID().toString();
+
+            //join on process step event and event table
+            projectsValueJoins.append(String.format(" inner join flow.process_step_event \"%s\" on \"%s\".id = \"%s\".process_step_event_id ", pseTable, pseTable, r.getPpsEventTable()));
+            projectsValueJoins.append(String.format(" inner join flow.event \"%s\" on \"%s\".id = \"%s\".event_id ", r.getValueReferenceTable(), r.getValueReferenceTable(), pseTable));
+
+            joinTable = r.getValueReferenceTable();
+          } else if (r.getReferenceTable().equals("flow.company_event_status_type")) {
+            final String companyStatusTable = UUID.randomUUID().toString();
+            projectsValueJoins.append(String.format(" inner join %s \"%s\" on \"%s\".id = \"%s\".%s ", r.getReferenceTable(), companyStatusTable, companyStatusTable, r.getPpsEventTable(), r.getJoinColumn()));
+            joinTable = companyStatusTable;
+            joinColumn = "id";
+          } else if (r.getReferenceTable().equals("flow.event_status_type")) {
+            final String companyStatusTable = UUID.randomUUID().toString();
+            final String statusTable = UUID.randomUUID().toString();
+            projectsValueJoins.append(String.format(" inner join flow.company_event_status_type \"%s\" on \"%s\".id = \"%s\".company_event_status_type_id ", companyStatusTable, companyStatusTable, r.getPpsEventTable()));
+            projectsValueJoins.append(String.format(" inner join %s \"%s\" on \"%s\".id = \"%s\".%s ", r.getReferenceTable(), statusTable, statusTable, companyStatusTable, r.getJoinColumn()));
+            joinTable = statusTable;
+            joinColumn = "id";
+          } else if (r.getReferenceTable().equals("flow.org")) {
+            joinColumn = r.getJoinColumn();
+          }
+
+          referenceLocation = String.format("\"%s\".%s", joinTable, joinColumn);
         }
       } else {
-        //custom field
         if (r.getCustomFieldSqlKey() != null) {
-
+          //custom fields w/sql queries
           r.setValueReferenceTable(UUID.randomUUID().toString());
           final String referenceTable = UUID.randomUUID().toString();
 
@@ -1647,18 +1778,18 @@ public class SmartlistService {
 
           referenceLocation = String.format("\"%s\".id", r.getValueReferenceTable());
         } else if (r.getCompanySystemListId() != null) {
-
+          //custom fields w/system lists
           final long systemListNumber = (r.getSystemListId() == 1 || r.getSystemListId() == 2) ? 1 : r.getSystemListId();
           final String systemListTable = "systemList_" + systemListNumber;
 
-          //Currently, we don't check if the system list is already joined on this cfgaId. We could do that to eliminate potential duplicates
+          //@TODO: Currently, we don't check if the system list is already joined on this cfgaId. We could do that to eliminate potential duplicates between fields/columns and requirements
           final String newValueTable = UUID.randomUUID().toString();
           projectsValueJoins.append(String.format(" left join \"%s\" \"%s\" on \"%s\".id = \"%s\".%s", systemListTable, newValueTable, newValueTable, r.getValueReferenceTable(), getReferenceColumn(r.getDataTypeId())));
           r.setValueReferenceTable(newValueTable);
 
           referenceLocation = String.format("\"%s\".id", newValueTable);
         } else {
-          referenceLocation = String.format("\"%s\".%s", r.getValueReferenceTable(), getReferenceColumn(r.getDataTypeId()));
+          referenceLocation = String.format("\"%s\".%s", (r.getObjectTypeId() == 6) ? r.getValueEventReferenceTable() : r.getValueReferenceTable(), getReferenceColumn(r.getDataTypeId()));
         }
       }
 
@@ -1719,12 +1850,12 @@ public class SmartlistService {
       }
     });
 
-    projectsClause.append(projectsValueJoins.toString());
-    projectsClause.append(" where" + projectsWhereClause.toString());
+    projectsClause.append(projectsValueJoins);
+    projectsClause.append(" where" + projectsWhereClause);
 
     projectsClause.append(" flow.project.archived is not true");
 
-    query.append(String.format("\"projects\" as (%s), ", projectsClause.toString()));
+    query.append(String.format("\"projects\" as (%s), ", projectsClause));
 
     for(SmartlistFieldAssignment f : fields) {
       if (f.getProcessStepId() != null && !usedProcessStepIds.contains(f.getProcessStepId())) {
@@ -1738,16 +1869,22 @@ public class SmartlistService {
     }
 
     if (customSqlQueries.length() > 0) {
-      query.append(customSqlQueries.toString());
+      query.append(customSqlQueries);
     }
 
     if (usedProcessStepIds.isEmpty()) {
       //at this point, the only fields are project/contact, so this is essentially a project/contact smartlist
-      //set smartlist object type to "project" and build sql like usual
-      smartlist.setObjectTypeId(1L);
-      return buildSql(smartlist, fields);
+      if (smartlist.getObjectTypeId() == 6) {
+        //@TODO: I don't like having a service dealing with controller stuff. Change this someday...
+        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "An event smartlist must have at least 1 event type column");
+      } else if(!useEventData) {
+        //set smartlist object type to "project" and build sql like usual
+        smartlist.setObjectTypeId(1L);
+        return buildSql(smartlist, fields);
+      }
     }
 
+    //a with clause will be generated for each distinct process step
     for(Long processStepId : usedProcessStepIds) {
 
       SmartlistFieldAssignment psField = fields.stream()
@@ -1760,19 +1897,23 @@ public class SmartlistService {
         break;
       }
 
-      // grab all fields using this process step will use
+      //grab all fields using this process step (PS and event fields)
       List<SmartlistFieldAssignment> psFields = fields.stream()
         .filter(f -> f.getProcessStepId() == null || f.getProcessStepId().equals(processStepId))
         .sorted(Comparator.comparing(SmartlistFieldAssignment::getDisplayOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       StringBuilder withClause = new StringBuilder("\"" + psField.getProcessStepName() + processStepId + "\" as (");
 
       StringBuilder selectFields = new StringBuilder();
+
+      //build the select clause
       psFields.forEach(f -> {
         f.setValueReferenceTable(UUID.randomUUID().toString());
+        f.setValueEventReferenceTable(UUID.randomUUID().toString());
 
         if (f.getSmartlistSystemListId() != null) {
+          //smartlist system list fields
           final String smartlistSystemListTable = "smartlistSystemList_" + f.getSmartlistSystemListId();
 
           if (List.of(1L, 3L, 5L).contains(f.getSmartlistSystemListId())) {
@@ -1792,17 +1933,34 @@ public class SmartlistService {
                 "where \"%s\".id = cpsst.process_step_status_type_id) as \"%s\", ", smartlistSystemListTable, f.getJoinColumn(), smartlistSystemListTable, f.getId()));
             }
           }
-
         } else if (f.getProcessStepId() != null) {
+          //PS and event fields
           if (f.getSystemListId() != null) {
+            //PS system lists
             final long systemListNumber = (f.getSystemListId() == 1 || f.getSystemListId() == 2) ? 1 : f.getSystemListId();
-            selectFields.append(String.format("(select name from \"systemList_%s\" where \"systemList_%s\".id = \"%s\".int_value) as \"%s\", ", systemListNumber, systemListNumber, f.getValueReferenceTable(), f.getId()));
+
+            var valueTable = "";
+            if (f.getObjectTypeId() == 4) {
+              valueTable = f.getValueReferenceTable();
+            } else if (f.getObjectTypeId() == 6) {
+              valueTable = f.getValueEventReferenceTable();
+            }
+
+            selectFields.append(String.format("(select name from \"systemList_%s\" where \"systemList_%s\".id = \"%s\".int_value) as \"%s\", ", systemListNumber, systemListNumber, valueTable, f.getId()));
           } else if (Objects.equals(f.getReferenceTable(), "flow.user")) {
             selectFields.append(String.format("concat(\"%s\".first_name, ' ', \"%s\".last_name) as \"%s\", ", f.getValueReferenceTable(), f.getValueReferenceTable(), f.getId()));
-          } else if (Objects.equals(f.getReferenceTable(), "flow.project_process_step") || Objects.equals(f.getReferenceTable(), "flow.process_step")) {
+          } else if (Objects.equals(f.getReferenceTable(), "flow.org")) { //else if field is event resource
+            selectFields.append(String.format("(select name from \"systemList_3\" where id = flow.project_process_step_event.resource_id) as \"%s\", ", f.getId()));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.project_process_step") ||
+                     Objects.equals(f.getReferenceTable(), "flow.process_step") ||
+                     Objects.equals(f.getReferenceTable(), "flow.project_process_step_event") ||
+                     Objects.equals(f.getReferenceTable(), "flow.event") ||
+                     Objects.equals(f.getReferenceTable(), "flow.company_event_status_type") ||
+                     Objects.equals(f.getReferenceTable(), "flow.event_status_type"))
+          {
             if (f.getDataTypeId() == 1) {
               selectFields.append(String.format(" to_char(%s.%s, 'YYYY-MM-DD') as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getId()));
-            } else if(f.getDataTypeId() == 2) {
+            } else if (f.getDataTypeId() == 2) {
               selectFields.append(String.format(" to_char(%s.%s, 'YYYY-MM-DD HH:MI am') as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getId()));
             } else if (f.getDataTypeId() == 6 && Objects.equals(f.getHasListValues(), true)) {
               selectFields.append(String.format(" (select name from flow.list_of_value where id = %s.%s) as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getId()));
@@ -1812,29 +1970,28 @@ public class SmartlistService {
               selectFields.append(String.format(" %s.%s as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getId()));
             }
           } else {
-            if (f.getDataTypeId() == 1) {
-              selectFields.append(String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD') as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
-            } else if(f.getDataTypeId() == 2) {
-              selectFields.append(String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD HH:MI am') as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
-            } else if (f.getDataTypeId() == 6 && f.getHasListValues()) {
-              selectFields.append(String.format(" (select name from flow.list_of_value where id = \"%s\".%s) as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
-            } else if (f.getDataTypeId() == 7) {
-              selectFields.append(String.format(" (select array_to_string(array(select \"name\" from flow.list_of_value where id = any(\"%s\".%s)), ',')) as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
-            } else if (f.getDataTypeId() == 8) {
-              selectFields.append(String.format(" \"%s\".name as \"%s\", ", f.getValueReferenceTable(), f.getId()));
-            } else {
-              selectFields.append(String.format(" \"%s\".%s as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
+            //PS and event custom fields
+            var valueTable = "";
+            if (f.getObjectTypeId() == 4) {
+              valueTable = f.getValueReferenceTable();
+            } else if (f.getObjectTypeId() == 6) {
+              valueTable = f.getValueEventReferenceTable();
             }
+            selectFields.append(addSelectCustomField(f.getDataTypeId(), valueTable, f.getId().toString(), f.getHasListValues()));
           }
         } else if (f.getSystemListId() != null) {
+          //system list fields
           final long systemListNumber = (f.getSystemListId() == 1 || f.getSystemListId() == 2) ? 1 : f.getSystemListId();
 
           selectFields.append(String.format("(select name from \"systemList_%s\" where \"systemList_%s\".id = \"%s\".int_value) as \"%s\", ", systemListNumber, systemListNumber, f.getValueReferenceTable(), f.getId()));
         } else {
           if (f.getCustomFieldSqlKey() != null) {
+            //custom sql fields
             selectFields.append(String.format("\"%s\".name as \"%s\", ", f.getValueReferenceTable(), f.getId()));
           } else {
+            //project and contact fields
             if (f.getCustomFieldGroupAssignmentId() != null) {
+              //system fields
               if (f.getDataTypeId() == 1) {
                 selectFields.append(String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD') as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getId()));
               } else if(f.getDataTypeId() == 2) {
@@ -1860,40 +2017,25 @@ public class SmartlistService {
       // remove comma and space from last field
       selectFields.deleteCharAt(selectFields.length() - 2);
 
-      withClause.append("select ").append(selectFields.toString());
+      withClause.append("select ").append(selectFields);
 
-      StringBuilder fromClause = new StringBuilder(" from ");
-
-      fromClause.append(" flow.project_process_step ");
-      fromClause.append(" inner join flow.company_process_step_status_type on flow.company_process_step_status_type.id = flow.project_process_step.company_process_step_status_type_id");
-      fromClause.append(" inner join flow.process_step_status_type on flow.process_step_status_type.id = flow.company_process_step_status_type.process_step_status_type_id");
-      fromClause.append(" inner join flow.process_step on process_step.id = project_process_step.process_step_id and process_step.id = " + processStepId);
-      fromClause.append(" inner join \"projects\" on \"projects\".id = flow.project_process_step.project_id");
-      fromClause.append(" inner join flow.project on flow.project.id = \"projects\".id");
-      fromClause.append(" left join flow.user_position \"project_user_position\" on \"project_user_position\".id = flow.project.user_position_id");
-      fromClause.append(" left join flow.user \"project_user\" on \"project_user\".id = \"project_user_position\".user_id");
-      fromClause.append(" inner join flow.company_project_status_type on flow.company_project_status_type.id = flow.project.company_project_status_type_id");
-      fromClause.append(" inner join flow.project_status_type on flow.project_status_type.id = flow.company_project_status_type.project_status_type_id");
-      fromClause.append(" inner join flow.contact on flow.contact.id = flow.project.contact_id and flow.contact.archived is not true");
-      fromClause.append(" left join flow.user_position \"contact_user_position\" on \"contact_user_position\".id = flow.contact.owner_user_position_id");
-      fromClause.append(" left join flow.user \"contact_user\" on \"contact_user\".id = \"contact_user_position\".user_id");
-
-      withClause.append(fromClause.toString());
+      withClause.append(addFromClause(smartlist.getObjectTypeId(), processStepId));
 
       StringBuilder valueJoins = new StringBuilder();
       psFields.forEach(f -> {
         if (f.getSmartlistSystemListId() != null) {
           //smartlist system fields
         } else if (f.getSmartlistFieldId() != null) {
+          //smartlist system fields
           if (f.getReferenceTable().equals("flow.user")) {
             final String joinUserPosition = UUID.randomUUID().toString();
-            valueJoins.append(String.format(" left join flow.user_position \"%s\" on \"%s\".id = flow.project_process_step.%s ", joinUserPosition, joinUserPosition, f.getJoinColumn()));
+            valueJoins.append(String.format(" left join flow.user_position \"%s\" on \"%s\".id = %s.%s ", joinUserPosition, joinUserPosition, f.getJoinTable(), f.getJoinColumn()));
             valueJoins.append(String.format(" left join %s \"%s\" on \"%s\".id = \"%s\".user_id ", f.getReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), joinUserPosition));
             f.setUserPositionTable(joinUserPosition);
           }
         } else {
           if (f.getCustomFieldSqlKey() != null) {
-
+            //custom sql fields
             final String referenceTable = UUID.randomUUID().toString();
 
             if (f.getObjectTypeId() == 1) {
@@ -1909,11 +2051,15 @@ public class SmartlistService {
           } else {
             //join the value table for the respective field object type
             if (f.getObjectTypeId() == 1) {
-              valueJoins.append(String.format(" left join flow.project_custom_field_value \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".custom_field_group_assignment_id = %s", f.getValueReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), f.getCustomFieldGroupAssignmentId()));
+              valueJoins.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), "flow.project"));
             } else if (f.getObjectTypeId() == 2) {
-              valueJoins.append(String.format(" left join flow.contact_custom_field_value \"%s\" on \"%s\".contact_id = flow.contact.id and \"%s\".custom_field_group_assignment_id = %s", f.getValueReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), f.getCustomFieldGroupAssignmentId()));
+              valueJoins.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), "flow.contact"));
             } else if (f.getObjectTypeId() == 4) {
-              valueJoins.append(String.format(" left join flow.project_process_step_custom_field_value \"%s\" on \"%s\".project_process_step_id = flow.project_process_step.id and \"%s\".custom_field_group_assignment_id = %s", f.getValueReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), f.getCustomFieldGroupAssignmentId()));
+              f.setPpsTable("flow.project_process_step");
+              valueJoins.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), f.getPpsTable()));
+            } else if (f.getObjectTypeId() == 6) {
+              f.setPpsEventTable("flow.project_process_step_event");
+              valueJoins.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueEventReferenceTable(), f.getPpsEventTable()));
             }
           }
         }
@@ -1936,19 +2082,22 @@ public class SmartlistService {
         if (r.getCustomFieldSqlKey() == null) {
           if (alreadyJoinedValueTable == null) {
             if (r.getCustomFieldGroupAssignmentId() != null) {
-              r.setValueReferenceTable(UUID.randomUUID().toString());
-
               //join the value table for the respective field object type
               if (r.getObjectTypeId() == 1) {
-                valueJoins.append(String.format(" left join flow.project_custom_field_value \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".custom_field_group_assignment_id = %s", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId()));
+                valueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), "flow.project"));
               } else if (r.getObjectTypeId() == 2) {
-                valueJoins.append(String.format(" left join flow.contact_custom_field_value \"%s\" on \"%s\".contact_id = flow.contact.id and \"%s\".custom_field_group_assignment_id = %s", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId()));
+                valueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), "flow.contact"));
               } else if (r.getObjectTypeId() == 4) {
-                valueJoins.append(String.format(" left join flow.project_process_step_custom_field_value \"%s\" on \"%s\".project_process_step_id = flow.project_process_step.id and \"%s\".custom_field_group_assignment_id = %s", r.getValueReferenceTable(), r.getValueReferenceTable(), r.getValueReferenceTable(), r.getCustomFieldGroupAssignmentId()));
+                r.setPpsTable("flow.project_process_step");
+                valueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueReferenceTable(), r.getPpsTable()));
+              } else if (r.getObjectTypeId() == 6) {
+                r.setPpsEventTable("flow.project_process_step_event");
+                valueJoins.append(joinValueTable(r.getObjectTypeId(), r.getCustomFieldGroupAssignmentId(), r.getValueEventReferenceTable(), r.getPpsEventTable()));
               }
             }
           } else if (r.getCustomFieldGroupAssignmentId() != null) {
             r.setValueReferenceTable(alreadyJoinedValueTable.getValueReferenceTable());
+            r.setValueEventReferenceTable(alreadyJoinedValueTable.getValueEventReferenceTable());
           }
         }
 
@@ -1965,7 +2114,7 @@ public class SmartlistService {
             referenceLocation = String.format("array[%s]::int[]", referenceLocation);
           }
         } else if (r.getSmartlistFieldId() != null) {
-          //smartlist field
+          //smartlist system fields
           if (r.getObjectTypeId() == 1 || r.getObjectTypeId() == 2) {
              if(Objects.equals(r.getReferenceTable(), "flow.project_user")) {
                referenceLocation = "\"project_user_position\".id";
@@ -1986,7 +2135,6 @@ public class SmartlistService {
               if (joinTable == null) {
                 joinTable = UUID.randomUUID().toString();
               }
-
             } catch (NullPointerException e) {
               joinTable = UUID.randomUUID().toString();
             }
@@ -1999,11 +2147,21 @@ public class SmartlistService {
             } else {
               referenceLocation = String.format("\"%s\".%s", joinTable, r.getReferenceColumn());
             }
+          } else if (r.getObjectTypeId() == 6) {
+            if (Objects.equals(r.getReferenceTable(), "flow.org")) {// if field is event resource
+              referenceLocation = r.getJoinTable() + "." + r.getJoinColumn();
+            } else if (r.getReferenceTable().equals("flow.company_event_status_type")) {
+              referenceLocation = r.getReferenceTable() + ".id";
+            } else if (r.getReferenceTable().equals("flow.event_status_type")) {
+              referenceLocation = r.getReferenceTable() + ".id";
+            } else if (r.getReferenceTable().contains(".")) {
+              referenceLocation = String.format("%s.%s", r.getReferenceTable(), r.getReferenceColumn());
+            }
           }
         } else {
-          //custom field
+          //custom fields
           if (r.getCustomFieldSqlKey() != null) {
-
+            //custom sql fields
             if (valueJoins.indexOf(r.getCustomFieldSqlKey()) == -1) {
               r.setValueReferenceTable(UUID.randomUUID().toString());
               final String referenceTable = UUID.randomUUID().toString();
@@ -2031,7 +2189,7 @@ public class SmartlistService {
 
             referenceLocation = String.format("\"%s\".id", r.getValueReferenceTable());
           } else if (r.getCompanySystemListId() != null) {
-
+            //system list fields
             final long systemListNumber = (r.getSystemListId() == 1 || r.getSystemListId() == 2) ? 1 : r.getSystemListId();
             final String systemListTable = "systemList_" + systemListNumber;
 
@@ -2042,7 +2200,7 @@ public class SmartlistService {
 
             referenceLocation = String.format("\"%s\".id", newValueTable);
           } else {
-            referenceLocation = String.format("\"%s\".%s", r.getValueReferenceTable(), getReferenceColumn(r.getDataTypeId()));
+            referenceLocation = String.format("\"%s\".%s", (r.getObjectTypeId() == 6) ? r.getValueEventReferenceTable() : r.getValueReferenceTable(), getReferenceColumn(r.getDataTypeId()));
           }
         }
 
@@ -2099,7 +2257,7 @@ public class SmartlistService {
         }
       });
 
-      withClause.append(valueJoins.toString());
+      withClause.append(valueJoins);
 
       final String companySubquery = String.format("select id from flow.company where id = %s or parent_company_id = %s", companyId, companyId);
 
@@ -2107,7 +2265,7 @@ public class SmartlistService {
         whereClause.append(String.format("flow.process_step.company_id = any(%s)", companySubquery));
         whereClause.append(" and flow.project_process_step.project_id = any(array[\"projects\".id])");
 
-        withClause.append(String.format(" where %s", whereClause.toString()));
+        withClause.append(String.format(" where %s", whereClause));
       } else {
         withClause.append(" where flow.project_process_step.project_id = any(array[\"projects\".id])");
         withClause.append(String.format(" and flow.process_step.company_id = any(%s)", companySubquery));
@@ -2123,7 +2281,9 @@ public class SmartlistService {
     // remove comma and space from with clause
     query.delete(query.length() - 2, query.length());
 
-    List<SmartlistFieldAssignment> sortedFields = fields.stream().sorted(Comparator.comparing(SmartlistFieldAssignment::getDisplayOrder)).collect(Collectors.toList());
+    List<SmartlistFieldAssignment> sortedFields = fields.stream()
+                                                        .sorted(Comparator.comparing(SmartlistFieldAssignment::getDisplayOrder))
+                                                        .toList();
 
     usedProcessStepIds.forEach(id -> {
 
@@ -2147,14 +2307,14 @@ public class SmartlistService {
       // remove comma and space from select clause
       selectClause.deleteCharAt(selectClause.length() - 2);
 
-      query.append(selectClause.toString());
+      query.append(selectClause);
 
       StringBuilder fromClause = new StringBuilder(" from ");
 
 
       psField.ifPresent(f -> fromClause.append(String.format("\"%s%s\"", f.getProcessStepName(), f.getProcessStepId())));
 
-      query.append(fromClause.toString()).append(" union ");
+      query.append(fromClause).append(" union ");
     });
 
     // remove comma and space from with clause
@@ -2165,180 +2325,497 @@ public class SmartlistService {
     return query.toString();
   }
 
-//  private SmartlistQuery addCustomFieldRequirement(SmartlistRequirement r, List<SmartlistFieldAssignment> joinTables, Smartlist s) {
-//
-//    SmartlistQuery query = new SmartlistQuery();
-//
-//    String referenceColumn;
-//    if (r.getHasListValues() != null && r.getHasListValues() && !r.getAllowMultiple()) {
-//      referenceColumn = "int_value";
-//    } else if (r.getCustomFieldSqlKey() != null) {
-//      referenceColumn = "id";
-//    } else {
-//      referenceColumn = getReferenceColumn(r.getDataTypeId());
-//    }
-//
-//    // see if table we need is already been joined, if so use it
-//    final String referenceTable = joinTables.stream()
-//      .filter(t -> t.getCustomFieldGroupAssignmentId()!= null && t.getCustomFieldGroupAssignmentId().equals(r.getCustomFieldGroupAssignmentId()))
-//      .map(t -> {
-//        if (t.getValueReferenceTable() != null) {
-//          return t.getValueReferenceTable();
-//        } else {
-//          return t.getReferenceTable();
-//        }
-//      })
-//      .findFirst()
-//      .orElse(null);
-//
-//    if (referenceTable != null) {
-//      query.setReferenceLocation("\"" + referenceTable + "\"." + referenceColumn);
-//    } else {
-//      // Do a new join from custom field value table based on object type
-//      if (r.getObjectTypeId() == 4) {
-//
-//        final String ppsUUID = UUID.randomUUID().toString();
-//        final String ppscfvUUID = UUID.randomUUID().toString();
-//
-//        query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join flow.project_process_step \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".process_step_id = %s ", ppsUUID, ppsUUID, ppsUUID, r.getProcessStepId())));
-//        if (s.isMainProcessSteps()) {
-//          query.setAdditionalJoins(query.getAdditionalJoins().append(String.format("and \"%s\".main is true ", ppsUUID)));
-//        }
-//
-//        if (r.getCustomFieldSqlKey() != null) {
-//          final String  customSqlUuid = UUID.randomUUID().toString();
-//
-//          query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join %s \"%s\" on \"%s\".project_process_step_id = \"%s\".id and \"%s\".custom_field_group_assignment_id = %s ", getReferenceTable(r.getObjectTypeId()), customSqlUuid, customSqlUuid, ppsUUID, customSqlUuid, r.getCustomFieldGroupAssignmentId())));
-//          query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join \"%s\" \"%s\" on \"%s\".id = \"%s\".int_value ", r.getCustomFieldSqlKey(), ppscfvUUID, ppscfvUUID, customSqlUuid)));
-//        } else {
-//          query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join %s \"%s\" on \"%s\".project_process_step_id = \"%s\".id and \"%s\".custom_field_group_assignment_id = %s ", getReferenceTable(r.getObjectTypeId()), ppscfvUUID, ppscfvUUID, ppsUUID, ppscfvUUID, r.getCustomFieldGroupAssignmentId())));
-//        }
-//
-//        query.setReferenceLocation("\"" + ppscfvUUID + "\"." + referenceColumn);
-//      } else {
-//        final String valueUuid = UUID.randomUUID().toString();
-//
-//        if (r.getCustomFieldSqlKey() != null) {
-//
-//          final String customSqlUuid = UUID.randomUUID().toString();
-//
-//          if (r.getObjectTypeId() == 1) {
-//            query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join %s \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".custom_field_group_assignment_id = %s ", getReferenceTable(r.getObjectTypeId()), valueUuid, valueUuid, valueUuid, r.getCustomFieldGroupAssignmentId())));
-//          } else if (r.getObjectTypeId() == 2) {
-//            query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join %s \"%s\" on \"%s\".contact_id = flow.contact.id and \"%s\".custom_field_group_assignment_id = %s ", getReferenceTable(r.getObjectTypeId()), valueUuid, valueUuid, valueUuid, r.getCustomFieldGroupAssignmentId())));
-//          }
-//          query.setAdditionalJoins(query.getAdditionalJoins().append(String.format(" left join \"%s\" \"%s\" on \"%s\".id = \"%s\".int_value ", r.getCustomFieldSqlKey(), customSqlUuid, customSqlUuid, valueUuid)));
-//
-//          query.setReferenceLocation("\"" + customSqlUuid + "\".id");
-//        } else {
-//          final String joinField = (r.getObjectTypeId() == 1) ? "project_id" : "contact_id";
-//          final String joinedTable = (r.getObjectTypeId() == 1) ? "project" : "contact";
-//
-//          query.setQuery(query.getQuery().append(String.format(" left join %s \"%s\" on \"%s\".%s = flow.%s.id and \"%s\".custom_field_group_assignment_id = %s ", getReferenceTable(r.getObjectTypeId()), valueUuid, valueUuid, joinField, joinedTable, valueUuid, r.getCustomFieldGroupAssignmentId())));
-//          query.setReferenceLocation("\"" + valueUuid + "\"." + referenceColumn);
-//        }
-//      }
-//    }
-//
-//    return query;
-//  }
+  public String buildWorkQueueSql(Smartlist smartlist, List<SmartlistFieldAssignment> fields, Boolean useEventData) {
 
-  private String writeCsv(List<Map<String, Object>> data, List<SmartlistFieldAssignment> headers) throws JsonProcessingException {
-    return writeCsv(data, headers, false);
+    final Long companyId = securityService.getCurrentUser().getCompanyId();
+
+    //start of overall query
+    var query = new StringBuilder();
+
+    //add "from" clause and initial joins
+    query.append(addFromClause((useEventData) ? 6L : smartlist.getObjectTypeId(), null));
+
+    //join value tables for every field
+    for (SmartlistFieldAssignment f : fields) {
+      //set all table aliases up front
+      f.setValueReferenceTable(UUID.randomUUID().toString());
+      f.setPpsTable(UUID.randomUUID().toString());
+      f.setPpsEventTable(UUID.randomUUID().toString());
+      f.setUserPositionTable(UUID.randomUUID().toString());
+
+      //join value tables for every custom field, so the latter logic is able to assume everything is joined
+      //if the field is a custom field
+      if (f.getCustomFieldGroupAssignmentId() != null) {
+        if (f.getObjectTypeId() == 1) {
+          query.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), "flow.project"));
+        } else if (f.getObjectTypeId() == 2) {
+          query.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), "flow.contact"));
+        } else if (f.getObjectTypeId() == 4) {
+          if (query.indexOf(".process_step_id = " + f.getProcessStepId()) != -1) {
+            // if the PS is already joined, use it
+            final String ppsTable = fields.stream()
+              .filter(field -> Objects.equals(field.getProcessStepId(), f.getProcessStepId()))
+              .map(SmartlistFieldAssignment::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            f.setPpsTable(ppsTable);
+          } else {
+            //join pps table
+            query.append(joinPpsTable(f.getPpsTable(), f.getProcessStepId(), smartlist.isMainProcessSteps()));
+          }
+
+          //join pps value table
+          query.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), f.getPpsTable()));
+        } else if (f.getObjectTypeId() == 6) {
+          //check if process step is already joined
+          if (query.indexOf(".process_step_id = " + f.getProcessStepId()) != -1) {
+            //if the PS is already joined, use it
+            final String ppsTable = fields.stream()
+              .filter(field -> Objects.equals(field.getProcessStepId(), f.getProcessStepId()))
+              .map(SmartlistFieldAssignment::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            f.setPpsTable(ppsTable);
+
+            //check if event is already joined
+            if (query.indexOf(".process_step_event_id = " + f.getEventId()) != -1) {
+              //grab event table
+              final String ppsEventTable = fields.stream()
+                .filter(field -> Objects.equals(field.getEventId(), f.getEventId()))
+                .map(SmartlistFieldAssignment::getPpsEventTable)
+                .findFirst()
+                .orElse(null);
+              f.setPpsEventTable(ppsEventTable);
+            } else {
+              query.append(joinPPsEventTable(f.getPpsEventTable(), f.getPpsTable(), f.getProcessStepEventId()));
+            }
+          } else {
+            //join pps and ppse tables
+            query.append(joinPpsTable(f.getPpsTable(), f.getProcessStepId(), smartlist.isMainProcessSteps()));
+            query.append(joinPPsEventTable(f.getPpsEventTable(), f.getPpsTable(), f.getProcessStepEventId()));
+          }
+
+          //join pps event value table
+          query.append(joinValueTable(f.getObjectTypeId(), f.getCustomFieldGroupAssignmentId(), f.getValueReferenceTable(), f.getPpsEventTable()));
+        }
+      }
+
+      //if field is a smartlist system list field
+      if (f.getSmartlistSystemListId() != null) {
+
+        //if field is process step status or category
+        if (f.getSmartlistSystemListId() == 2 || f.getSmartlistSystemListId() == 4) {
+
+          //check if process step is already joined
+          if (query.indexOf(".process_step_id = " + f.getProcessStepId()) != -1) {
+            //if the PS is already joined, use it
+            final String ppsTable = fields.stream()
+              .filter(field -> Objects.equals(field.getProcessStepId(), f.getProcessStepId()))
+              .map(SmartlistFieldAssignment::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            f.setPpsTable(ppsTable);
+          } else {
+            query.append(joinPpsTable(f.getPpsTable(), f.getProcessStepId(), smartlist.isMainProcessSteps()));
+          }
+
+          if (Objects.equals(f.getReferenceTable(), "flow.company_process_step_status_type")) { //else if field is process step status
+            query.append(String.format(" left join %s \"%s\" on \"%s\".id = \"%s\".%s ", f.getReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), f.getPpsTable(), f.getJoinColumn()));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.process_step_status_type")) { //else if field is process step category (root status)
+            final String companyStatusTable = UUID.randomUUID().toString();
+            //@TODO: The hardcoded "process_step_status_type_id" should come from the smartlist_field table, but isn't working here with the existing setup. Revisit
+            query.append(String.format(" left join flow.company_process_step_status_type \"%s\" on \"%s\".id = \"%s\".company_process_step_status_type_id ", companyStatusTable, companyStatusTable, f.getPpsTable()))
+              .append(String.format(" left join %s \"%s\" on \"%s\".id = \"%s\".%s ", f.getReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), companyStatusTable, "process_step_status_type_id"));
+          }
+        }
+      } else if (f.getSmartlistFieldId() != null) { //else if field is smartlist system field
+        if (f.getObjectTypeId() == 4) {
+
+          //check if process step is already joined
+          if (query.indexOf(".process_step_id = " + f.getProcessStepId()) != -1) {
+            //if the PS is already joined, use it
+            final String ppsTable = fields.stream()
+              .filter(field -> Objects.equals(field.getProcessStepId(), f.getProcessStepId()))
+              .map(SmartlistFieldAssignment::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            f.setPpsTable(ppsTable);
+          } else {
+            query.append(joinPpsTable(f.getPpsTable(), f.getProcessStepId(), smartlist.isMainProcessSteps()));
+          }
+
+          //if field is the process step name
+          if (Objects.equals(f.getReferenceTable(), "flow.process_step")) {
+            query.append(String.format(" left join flow.process_step \"%s\" on \"%s\".id = \"%s\".process_step_id", f.getValueReferenceTable(), f.getValueReferenceTable(), f.getPpsTable()));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.user")) { //else if field is PS owner
+
+            final String newValueTable = UUID.randomUUID().toString();
+            query.append(String.format(" left join \"systemList_1\" \"%s\" on \"%s\".id = \"%s\".%s", newValueTable, newValueTable, f.getPpsTable(), f.getJoinColumn()));
+            f.setValueReferenceTable(newValueTable);
+          }
+        } else if (f.getObjectTypeId() == 6) {
+
+          //check if process step is already joined
+          if (query.indexOf(".process_step_id = " + f.getProcessStepId()) != -1) {
+            //if the PS is already joined, use it
+            final String ppsTable = fields.stream()
+              .filter(field -> Objects.equals(field.getProcessStepId(), f.getProcessStepId()))
+              .map(SmartlistFieldAssignment::getPpsTable)
+              .findFirst()
+              .orElse(null);
+            f.setPpsTable(ppsTable);
+
+            //check if event is already joined
+            if (query.indexOf(".process_step_event_id = " + f.getEventId()) != -1) {
+              // grab event table
+              final String ppsEventTable = fields.stream()
+                .filter(field -> Objects.equals(field.getEventId(), f.getEventId()))
+                .map(SmartlistFieldAssignment::getPpsEventTable)
+                .findFirst()
+                .orElse(null);
+              f.setPpsEventTable(ppsEventTable);
+            } else {
+              query.append(joinPPsEventTable(f.getPpsEventTable(), f.getPpsTable(), f.getProcessStepEventId()));
+            }
+          } else {
+            //join pps and ppse tables
+            query.append(joinPpsTable(f.getPpsTable(), f.getProcessStepId(), smartlist.isMainProcessSteps()));
+            query.append(joinPPsEventTable(f.getPpsEventTable(), f.getPpsTable(), f.getProcessStepEventId()));
+          }
+
+          //if field is event name system field
+          if (Objects.equals(f.getReferenceTable(), "flow.event")) {
+            final String pseTable = UUID.randomUUID().toString();
+
+            //join on process step event and event table
+            query.append(String.format(" left join flow.process_step_event \"%s\" on \"%s\".id = \"%s\".process_step_event_id ", pseTable, pseTable, f.getPpsEventTable()));
+            query.append(String.format(" left join flow.event \"%s\" on \"%s\".id = \"%s\".event_id ", f.getValueReferenceTable(), f.getValueReferenceTable(), pseTable));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.company_event_status_type")) { //else if field is event status
+            query.append(String.format(" left join %s \"%s\" on \"%s\".id = \"%s\".%s ", f.getReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), f.getPpsEventTable(), f.getJoinColumn()));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.event_status_type")) { //else if field is event category (root status)
+            final String companyStatusTable = UUID.randomUUID().toString();
+            query.append(String.format(" left join flow.company_event_status_type \"%s\" on \"%s\".id = \"%s\".company_event_status_type_id ", companyStatusTable, companyStatusTable, f.getPpsEventTable()))
+              .append(String.format(" left join %s \"%s\" on \"%s\".id = \"%s\".%s ", f.getReferenceTable(), f.getValueReferenceTable(), f.getValueReferenceTable(), companyStatusTable, f.getJoinColumn()));
+          } else if (Objects.equals(f.getReferenceTable(), "flow.org")) { //else if field is event resource
+
+            final String newValueTable = UUID.randomUUID().toString();
+            query.append(String.format(" left join \"systemList_3\" \"%s\" on \"%s\".id = \"%s\".%s", newValueTable, newValueTable, f.getPpsEventTable(), f.getJoinColumn()));
+            f.setValueReferenceTable(newValueTable);
+          }
+        }
+      } else {//else field is custom
+
+        final String currentValueTable = f.getValueReferenceTable();
+        final String newValueTable = UUID.randomUUID().toString();
+
+        //if field is a custom field w/sql query
+        if (f.getCustomFieldSqlKey() != null) {
+
+          query.append(String.format(" left join \"%s\" \"%s\" on \"%s\" .id = \"%s\".int_value", f.getCustomFieldSqlKey(), newValueTable, newValueTable, currentValueTable));
+          f.setValueReferenceTable(newValueTable);
+        } else if (f.getCompanySystemListId() != null) { //else if custom field is system list
+
+          final long systemListNumber = (f.getSystemListId() == 1 || f.getSystemListId() == 2) ? 1 : f.getSystemListId();
+          final String systemListTable = "systemList_" + systemListNumber;
+          //@TODO: Currently, we don't check if the system list is already joined on this cfgaId. We could do that to eliminate potential duplicates between fields/columns and requirements
+          query.append(String.format(" left join \"%s\" \"%s\" on \"%s\".id = \"%s\".%s", systemListTable, newValueTable, newValueTable, currentValueTable, getReferenceColumn(f.getDataTypeId())));
+          f.setValueReferenceTable(newValueTable);
+        }
+      }
+    }
+
+    //build the "where" clause
+    query.append(" where ")
+
+      //omit archived items
+      .append("flow.project.archived is not true and ")
+      .append("flow.project_process_step.archived is not true and ")
+      .append("flow.project_process_step_event.archived is not true");
+
+
+    //apply statuses/categories for any attached work queue types
+    if (!smartlist.getEventWorkQueueTypes().isEmpty()) {
+      query.append(" and (");
+
+      for(ProcessStepEventWorkQueueType wqt : smartlist.getEventWorkQueueTypes()) {
+        query.append(String.format("(flow.process_step_event.id = %s and ", wqt.getProcessStepEventId()));
+
+        //extract project categories/statuses
+        List<Long> projectStatuses = wqt.getProjectStatuses().stream()
+          .filter(s -> !s.getIsRoot())
+          .map(WorkQueueTypeProjectStatus::getCompanyProjectStatusTypeId)
+          .toList();
+
+        List<Long> projectCategories = wqt.getProjectStatuses().stream()
+          .filter(WorkQueueTypeProjectStatus::getIsRoot)
+          .map(WorkQueueTypeProjectStatus::getProjectStatusTypeId)
+          .toList();
+
+        //extract process step categories/statuses
+        List<Long> psStatuses = wqt.getProcessStepStatuses().stream()
+          .filter(s -> !s.getIsRoot())
+          .map(WorkQueueTypeProcessStepStatus::getCompanyProcessStepStatusTypeId)
+          .toList();
+
+        List<Long> psCategories = wqt.getProcessStepStatuses().stream()
+          .filter(WorkQueueTypeProcessStepStatus::getIsRoot)
+          .map(WorkQueueTypeProcessStepStatus::getProcessStepStatusTypeId)
+          .toList();
+
+        List<Long> eventStatuses = wqt.getEventStatuses().stream()
+          .filter(s -> !s.getIsRoot())
+          .map(WorkQueueTypeEventStatus::getCompanyEventStatusTypeId)
+          .toList();
+
+        List<Long> eventCategories = wqt.getEventStatuses().stream()
+          .filter(WorkQueueTypeEventStatus::getIsRoot)
+          .map(WorkQueueTypeEventStatus::getEventStatusTypeId)
+          .toList();
+
+        query.append("(")
+          .append(String.format("flow.company_project_status_type.id = any(array%s::int[]) or ", projectStatuses))
+          .append(String.format("flow.project_status_type.id = any(array%s::int[])", projectCategories))
+          .append(")")
+
+          .append(" and (")
+          .append(String.format("flow.company_process_step_status_type.id = any(array%s::int[]) or ", psStatuses))
+          .append(String.format("flow.process_step_status_type.id = any(array%s::int[])", psCategories))
+          .append(")")
+
+          .append(" and (")
+          .append(String.format("flow.company_event_status_type.id = any(array%s::int[]) or ", eventStatuses))
+          .append(String.format("flow.event_status_type.id = any(array%s::int[])", eventCategories))
+          .append(")) or ");
+      }
+
+      //remove the last "or "
+      query.delete(query.length() - 3, query.length());
+
+      query.append(")");
+    }
+
+    //every table with a value we need is now joined
+    //build the "select" clause from smartlist fields
+    var selectQuery = new StringBuilder();
+
+    for (SmartlistFieldAssignment f : fields) {
+      //if field is smartlist system list
+      if (f.getSmartlistSystemListId() != null) {
+        final String smartlistSystemListTable = "smartlistSystemList_" + f.getSmartlistSystemListId();
+
+        if (List.of(1L, 3L, 5L).contains(f.getSmartlistSystemListId())) {
+          selectQuery.append(String.format("(select name from \"%s\" where \"%s\".id = %s.%s) as \"%s\", ", smartlistSystemListTable, smartlistSystemListTable, f.getJoinTable(), f.getJoinColumn(), f.getName()));
+        } else if (List.of(2L, 4L).contains(f.getSmartlistSystemListId())) {
+          selectQuery.append(String.format("\"%s\".%s as \"%s\", ", f.getValueReferenceTable(), f.getReferenceColumn(), f.getName()));
+        }
+      } else if (f.getProcessStepId() != null) { //if field is process step or event
+
+        //if field is system list, PS owner, or event resource
+        if (f.getSystemListId() != null || Objects.equals(f.getReferenceTable(), "flow.user") || Objects.equals(f.getReferenceTable(), "flow.org")) {
+          selectQuery.append(String.format("\"%s\".name as \"%s\", ", f.getValueReferenceTable(), f.getName()));
+        } else if (Objects.equals(f.getReferenceTable(), "flow.project_process_step") ||
+                   Objects.equals(f.getReferenceTable(), "flow.process_step") ||
+                   Objects.equals(f.getReferenceTable(), "flow.project_process_step_event") ||
+                   Objects.equals(f.getReferenceTable(), "flow.event") ||
+                   Objects.equals(f.getReferenceTable(), "flow.company_event_status_type") ||
+                   Objects.equals(f.getReferenceTable(), "flow.event_status_type"))
+        {//else if field is process step or event system field
+          if (f.getDataTypeId() == 1) {
+            selectQuery.append(String.format(" to_char(%s.%s, 'YYYY-MM-DD') as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+          } else if(f.getDataTypeId() == 2) {
+            selectQuery.append(String.format(" to_char(%s.%s, 'YYYY-MM-DD HH:MI am') as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+          } else if (f.getDataTypeId() == 6 && Objects.equals(f.getHasListValues(), true)) {
+            selectQuery.append(String.format(" (select name from flow.list_of_value where id = %s.%s) as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+          } else if (f.getDataTypeId() == 7) {
+            selectQuery.append(String.format(" (select array_to_string(array(select \"name\" from flow.list_of_value where id = any(%s.%s)), ',')) as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+          } else {
+            selectQuery.append(String.format(" %s.%s as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+          }
+        } else {//else field is process step or event custom field
+          selectQuery.append(addSelectCustomField(f.getDataTypeId(), f.getValueReferenceTable(), f.getName(), f.getHasListValues()));
+        }
+      } else {
+        //if field is custom sql
+        if (f.getCustomFieldSqlKey() != null) {
+          selectQuery.append(String.format("\"%s\".name as \"%s\", ", f.getValueReferenceTable(), f.getName()));
+        } else { //else field is project or contact
+
+          //if field is system
+          if (f.getCustomFieldGroupAssignmentId() != null) {
+            if (f.getDataTypeId() == 1) {
+              selectQuery.append(String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD') as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getName()));
+            } else if(f.getDataTypeId() == 2) {
+              selectQuery.append(String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD HH:MI am') as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getName()));
+            } else if (f.getDataTypeId() == 6 && f.getHasListValues()) {
+              selectQuery.append(String.format(" (select name from flow.list_of_value where id = \"%s\".%s) as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getName()));
+            } else if (f.getDataTypeId() == 7) {
+              selectQuery.append(String.format(" (select array_to_string(array(select \"name\" from flow.list_of_value where id = any(\"%s\".%s)), ',')) as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getName()));
+            } else {
+              selectQuery.append(String.format(" \"%s\".%s as \"%s\", ", f.getValueReferenceTable(), getReferenceColumn(f.getDataTypeId()), f.getName()));
+            }
+          } else {
+            if (Objects.equals(f.getReferenceTable(), "flow.project_user") || Objects.equals(f.getReferenceTable(), "flow.contact_user")) {
+              selectQuery.append(String.format("%s as \"%s\", ", f.getReferenceColumn(), f.getName()));
+            } else {
+              selectQuery.append(String.format("%s.%s as \"%s\", ", f.getReferenceTable(), f.getReferenceColumn(), f.getName()));
+            }
+          }
+        }
+      }
+    }
+
+    if (!fields.isEmpty()) {
+      //remove the extra ", "
+      selectQuery.delete(selectQuery.length() - 2, selectQuery.length());
+    }
+
+    //build the "with" and "select" clause from default fields
+    var defaultFields = new StringBuilder().append("with ")
+
+      // Get smartlist system lists
+      .append(String.format("\"smartlistSystemList_1\" as (select * from flow.get_smartlist_system_list_options(1::int, %s::int)), ", companyId))
+      .append(String.format("\"smartlistSystemList_2\" as (select * from flow.get_smartlist_system_list_options(2::int, %s::int)), ", companyId))
+      .append(String.format("\"smartlistSystemList_3\" as (select * from flow.get_smartlist_system_list_options(3::int, %s::int)), ", companyId))
+      .append(String.format("\"smartlistSystemList_4\" as (select * from flow.get_smartlist_system_list_options(4::int, %s::int)), ", companyId))
+      .append(String.format("\"smartlistSystemList_5\" as (select * from flow.get_smartlist_system_list_options(5::int, %s::int)), ", companyId))
+
+      // Get tables for system lists
+      .append("\"systemList_1\" as (select up.id, concat(u.first_name, ' ', u.last_name::text) as name from flow.user_position up inner join flow.user u on u.id = up.user_id), ")
+      .append("\"systemList_3\" as (select id, org_name::text as name from flow.org), ")
+      .append("\"systemList_4\" as (select id, concat(first_name, ' ', last_name::text) as name from flow.user), ");
+
+
+    //add custom sql value tables
+    for (SmartlistFieldAssignment f : fields) {
+      if (f.getCustomFieldSqlKey() != null && selectQuery.indexOf(f.getCustomFieldSqlKey()) == -1) {
+        defaultFields.append(String.format("\"%s\" as (%s), ", f.getCustomFieldSqlKey(), sqlCache.getByKey(f.getCustomFieldSqlKey() + ".smartlist")));
+      }
+    }
+
+    //remove the extra ", "
+    defaultFields.delete(defaultFields.length() - 2, defaultFields.length());
+
+    //default fields
+    if (useEventData) {
+      //event fields
+      defaultFields.append(" select ")
+        .append("flow.project.project_name as \"Project Name\", ")
+        .append("flow.event.event_name \"Event Name\", ")
+        .append("flow.project_process_step_event.id \"projectProcessStepEventId\", ")
+        .append("flow.project_process_step.id \"projectProcessStepId\", ")
+        .append("flow.project.id as \"projectId\", ")
+        .append("flow.company_event_status_type.event_status_type as \"Event Status\", ")
+        .append("flow.process_step.process_step_name as \"Process Step Name\", ")
+        .append("flow.company_process_step_status_type.process_step_status_type as \"Process Step Status\", ")
+        .append("DATE_PART('day', now() - flow.project_process_step_event.date_created) as \"Days In Queue\", ");
+
+    } else {
+      //process step fields
+      defaultFields.append(" select ");
+    }
+
+    if (fields.isEmpty()) {
+      //remove the extra ", "
+      defaultFields.delete(defaultFields.length() - 2, defaultFields.length());
+    }
+
+
+
+    //combine the query clauses and add the finishing semicolon
+    return defaultFields.append(selectQuery).append(query).append(";").toString();
   }
 
-  private String writeCsv(List<Map<String, Object>> data, List<SmartlistFieldAssignment> headers, Boolean workQueueSmartlist) throws JsonProcessingException {
+  private String writeCsv(List<Map<String, Object>> data, List<SmartlistFieldAssignment> headers, Boolean workQueueSmartlist, Boolean useEventData) throws JsonProcessingException {
     CsvSchema.Builder builder = CsvSchema.builder();
 
     if(workQueueSmartlist) {
-      //add extra headers to the beginning if wq smartlist
-      String[] wqHeaders = {
-        "Active Process Steps",
-        "Owner",
-        "State Abbreviation",
-        "Days In Queue",
-        "Process Step Status Type",
-        "Process Step Name",
-        "Project Name",
-      };
-      for(String header : wqHeaders) {
-        SmartlistFieldAssignment sfa = new SmartlistFieldAssignment();
-        sfa.setName(header);
-        headers.add(0, sfa);
+      if (useEventData) {
+        //add default fields to fields list
+        var defaultFields = getEventWorkqueueDefaultFields();
+        defaultFields.addAll(headers);
+        headers = defaultFields;
+      } else {
+        //add extra headers to the beginning if wq smartlist
+        String[] wqHeaders = {
+          "Active Process Steps",
+          "Owner",
+          "State Abbreviation",
+          "Days In Queue",
+          "Process Step Status Type",
+          "Process Step Name",
+          "Project Name",
+        };
+        for(String header : wqHeaders) {
+          SmartlistFieldAssignment sfa = new SmartlistFieldAssignment();
+          sfa.setName(header);
+          headers.add(0, sfa);
+        }
+
+        //add most recent note header to the end after all the custom fields
+
+        SmartlistFieldAssignment sfa3 = new SmartlistFieldAssignment();
+        sfa3.setName("Next Follow-up Date");
+        headers.add(sfa3);
+
+        SmartlistFieldAssignment sfa4 = new SmartlistFieldAssignment();
+        sfa4.setName("Note Content");
+        headers.add(sfa4);
+
+        SmartlistFieldAssignment sfa5 = new SmartlistFieldAssignment();
+        sfa5.setName("Note Created By");
+        headers.add(sfa5);
       }
-
-      //add most recent note header to the end after all the custom fields
-//      SmartlistFieldAssignment sfa2 = new SmartlistFieldAssignment();
-//      sfa2.setName("Note Created At");
-//      headers.add(sfa2);
-
-      SmartlistFieldAssignment sfa3 = new SmartlistFieldAssignment();
-      sfa3.setName("Next Follow-up Date");
-      headers.add(sfa3);
-
-      SmartlistFieldAssignment sfa4 = new SmartlistFieldAssignment();
-      sfa4.setName("Note Content");
-      headers.add(sfa4);
-
-      SmartlistFieldAssignment sfa5 = new SmartlistFieldAssignment();
-      sfa5.setName("Note Created By");
-      headers.add(sfa5);
-
     }
 
     // Dates have to be set as string, else when written to buffer, they display as epoch milli
     for (int i = 0; i < data.size(); i++) {
       Map<String, Object> r = data.get(i);
 
-//      for (String field : dateFields) {
-//        r.put(field, (r.get(field) == null) ? "N/A" : r.get(field).toString());
-//      }
       r.remove("project_id");
       r.remove("contact_id");
       if(workQueueSmartlist) {
-        r.remove("processStepId");
-        r.remove("projectProcessStepId");
-        r.remove("workQueueType");
-        r.remove("workQueueTypeId");
-        r.remove("processStepWorkQueueTypeId");
-        r.remove("projectId");
-        r.remove("projectStatusTypeId");
-        r.remove("companyProjectStatusTypeId");
-        r.remove("contactId");
-        r.remove("lastUpdated");
-        r.remove("Owning Positions");
-//        r.remove("Active Process Steps");
-
-        //handle notes
-        PGobject notesArray = ((PGobject) r.get("Notes"));
-        TypeReference<List<Note>> notesRef = new TypeReference<>() {};
-        List<Note> notes = om.readValue(notesArray.getValue(), notesRef);
-        if(notes.size() > 0) {
-          Note firstNote = notes.get(0);
-          r.put("Next Follow-up Date", firstNote.getFollowUpDate());
-          r.put("Note Content", firstNote.getNote());
-          r.put("Note Created By", firstNote.getCreatedBy());
+        if (useEventData) {
+          r.remove("projectProcessStepEventId");
+          r.remove("projectProcessStepId");
+          r.remove("projectId");
         } else {
-          r.put("Next Follow-up Date", null);
-          r.put("Note Content", null);
-          r.put("Note Created By", null);
+          r.remove("processStepId");
+          r.remove("projectProcessStepId");
+          r.remove("workQueueType");
+          r.remove("workQueueTypeId");
+          r.remove("processStepWorkQueueTypeId");
+          r.remove("projectId");
+          r.remove("projectStatusTypeId");
+          r.remove("companyProjectStatusTypeId");
+          r.remove("contactId");
+          r.remove("lastUpdated");
+          r.remove("Owning Positions");
+
+          //handle notes
+          PGobject notesArray = ((PGobject) r.get("Notes"));
+          TypeReference<List<Note>> notesRef = new TypeReference<>() {};
+          List<Note> notes = om.readValue(notesArray.getValue(), notesRef);
+          if(notes.size() > 0) {
+            Note firstNote = notes.get(0);
+            r.put("Next Follow-up Date", firstNote.getFollowUpDate());
+            r.put("Note Content", firstNote.getNote());
+            r.put("Note Created By", firstNote.getCreatedBy());
+          } else {
+            r.put("Next Follow-up Date", null);
+            r.put("Note Content", null);
+            r.put("Note Created By", null);
+          }
+          r.remove("Notes");
         }
-        r.remove("Notes");
       }
 
-//      HashMap<String, Object> test = new HashMap<>();
-//      test.put("processStepId", r.get("processStepId"));
-//      data.set(i, test);
       data.set(i, r);
     }
-
-//    headers.remove(1);
-//    headers.get(0).setName("processStepId");
 
     for (SmartlistFieldAssignment f : headers) {
       String headerName = f.getName();
       //if it is a work queue smartlist the custom columns have the process step name in them so this part has to be different
-      if(workQueueSmartlist && null != f.getProcessStepName()) {
+      if(workQueueSmartlist && !useEventData && null != f.getProcessStepName()) {
         headerName = f.getProcessStepName() + " - " + f.getName();
         if (headerName.length() > 63) {
           headerName = headerName.substring(0, 63);
@@ -2565,6 +3042,220 @@ public class SmartlistService {
     return sqlCache.query("smartlist.getSmartlistSystemList", Map.of("smartlistSystemListId", smartlistSystemListId, "companyId", securityService.getCurrentUser().getCompanyId()), ListOfValue.class);
   }
 
+  /**
+   * Creates a select sql snippet based on an object type ID
+   *
+   * @param dataTypeId Data type ID of the field being selected
+   * @param valueTable UUID String of the underlying value table
+   * @param fieldLabel Alias to name the field/column. Must be guaranteed unique within the overall generated query to avoid collisions.
+   * @param hasListValues Is the field value being joined a list?
+   * @return a sql snippet
+   */
+  //@TODO: This function name is no bueno. Needs some love
+  private String addSelectCustomField(Long dataTypeId, String valueTable, String fieldLabel, Boolean hasListValues) {
+    var select = "";
+    if (dataTypeId == 1) {
+      select = String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD') as \"%s\", ", valueTable, getReferenceColumn(dataTypeId), fieldLabel);
+    } else if(dataTypeId == 2) {
+      select = String.format(" to_char(\"%s\".%s, 'YYYY-MM-DD HH:MI am') as \"%s\", ", valueTable, getReferenceColumn(dataTypeId), fieldLabel);
+    } else if (dataTypeId == 6 && hasListValues) {
+      select = String.format(" (select name from flow.list_of_value where id = \"%s\".%s) as \"%s\", ", valueTable, getReferenceColumn(dataTypeId), fieldLabel);
+    } else if (dataTypeId == 7) {
+      select = String.format(" (select array_to_string(array(select \"name\" from flow.list_of_value where id = any(\"%s\".%s)), ',')) as \"%s\", ", valueTable, getReferenceColumn(dataTypeId), fieldLabel);
+    } else if (dataTypeId == 8) {
+      select = String.format(" \"%s\".name as \"%s\", ", valueTable, fieldLabel);
+    } else {
+      select = String.format(" \"%s\".%s as \"%s\", ", valueTable, getReferenceColumn(dataTypeId), fieldLabel);
+    }
+    return select;
+  }
+
+  /**
+   * Creates a left join string to a project_process_step table. Assumes `flow.project` is already joined
+   *
+   * @param ppsTable UUID String of the project_process_step table
+   * @param processStepId Process Step ID of the project_process_step table
+   * @param isMainProcessSteps If we want to select only the main project process step, or all
+   * @return a sql string snippet
+   */
+  private String joinPpsTable(String ppsTable, Long processStepId, Boolean isMainProcessSteps) {
+    var join = String.format(" left join flow.project_process_step \"%s\" on \"%s\".project_id = flow.project.id and \"%s\".process_step_id = %s and \"%s\".archived is not true ", ppsTable, ppsTable, ppsTable, processStepId, ppsTable);
+    if (isMainProcessSteps) {
+      join += String.format(" and \"%s\".main is true ", ppsTable);
+    }
+    return join;
+  }
+
+  /**
+   * Creates a left join string to a project_process_step_event table. Assumes `ppsTable` is already joined
+   *
+   * @param ppsEventTable UUID string of the project_process_step_event table
+   * @param ppsTable UUID string of the project_process_step table to join to
+   * @param processStepEventId Process step event ID of the project_process_step_event table
+   * @return a sql string snippet
+   */
+  private String joinPPsEventTable(String ppsEventTable, String ppsTable, Long processStepEventId) {
+    return String.format(" left join flow.project_process_step_event \"%s\" on \"%s\".project_process_step_id = \"%s\".id and \"%s\".process_step_event_id = %s and \"%s\".archived is not true and \"%s\".process_step_event_id != flow.process_step_event.id ", ppsEventTable, ppsEventTable, ppsTable, ppsEventTable, processStepEventId, ppsEventTable, ppsEventTable);
+  }
+
+  /**
+   * Creates a left join string to a custom_field_value table based off `objectTypeId`. Assumes `objectTable` is already joined
+   *
+   * @param objectTypeId Object type ID of the field the joining value table points to
+   * @param cfgaId Custom field group assignment ID of the field the joining value table points to
+   * @param valueTable  UUID string of the custom_field_value table being joined
+   * @param objectTable String (UUID string for process step and event fields when smartlist is NOT event/process step) to the object type specific joining table
+   * @return a sql snippet
+   */
+  private String joinValueTable(Long objectTypeId, Long cfgaId, String valueTable, String objectTable) {
+
+    var join = "";
+    var baseObjectTable = "";
+    var baseJoinColumn = "";
+
+    boolean isUUID;
+
+    try {
+      UUID.fromString(objectTable);
+      isUUID = true;
+    } catch(Exception e) {
+      isUUID = false;
+    }
+
+    if (objectTypeId == 6) {
+      baseObjectTable = "project_process_step_event";
+      baseJoinColumn = "project_process_step_event_id";
+
+      //not sure we actually need to check for objectTable being a uuid here. I think on an event field, we will always pass in a uuid
+      var casePart = "";
+      if (isUUID) {
+        casePart = String.format("case when \"%s\".process_step_event_id != flow.process_step_event.id then \"%s\".id else flow.project_process_step_event.id end", objectTable, objectTable);
+        join = String.format(" left join flow.%s_custom_field_value \"%s\" on \"%s\".custom_field_group_assignment_id = %s and \"%s\".%s = %s ", baseObjectTable, valueTable, valueTable, cfgaId, valueTable, baseJoinColumn, casePart);
+      } else {
+        join = String.format(" left join flow.%s_custom_field_value \"%s\" on \"%s\".%s = %s.id and \"%s\".custom_field_group_assignment_id = %s ",  baseObjectTable, valueTable, valueTable, baseJoinColumn, objectTable, valueTable, cfgaId);
+      }
+
+    } else {
+      var joinWithObjectTableQuotes = " left join flow.%s_custom_field_value \"%s\" on \"%s\".%s = \"%s\".id and \"%s\".custom_field_group_assignment_id = %s ";
+      var joinWithoutObjectTableQuotes = " left join flow.%s_custom_field_value \"%s\" on \"%s\".%s = %s.id and \"%s\".custom_field_group_assignment_id = %s ";
+
+      if (objectTypeId == 1) {
+        baseObjectTable = "project";
+        baseJoinColumn = "project_id";
+      } else if (objectTypeId == 2) {
+        baseObjectTable = "contact";
+        baseJoinColumn = "contact_id";
+      } else if (objectTypeId == 4) {
+        baseObjectTable = "project_process_step";
+        baseJoinColumn = "project_process_step_id";
+      }
+
+      if (isUUID) {
+        join = String.format(joinWithObjectTableQuotes, baseObjectTable, valueTable, valueTable, baseJoinColumn, objectTable, valueTable, cfgaId);
+      } else {
+        join = String.format(joinWithoutObjectTableQuotes, baseObjectTable, valueTable, valueTable, baseJoinColumn, objectTable, valueTable, cfgaId);
+      }
+    }
+    return join;
+  }
+
+  private String addFromClause(Long smartlistObjectTypeId, Long processStepId) {
+    var join = " from";
+
+    if (smartlistObjectTypeId == 4) {
+      join += " flow.project_process_step";
+    } else if (smartlistObjectTypeId == 6) {
+      join += " flow.project_process_step_event";
+      join += " inner join flow.process_step_event on flow.process_step_event.id = flow.project_process_step_event.process_step_event_id ";
+      join += " inner join flow.event on flow.event.id = flow.process_step_event.event_id ";
+      join += " inner join flow.project_process_step on flow.project_process_step.id = flow.project_process_step_event.project_process_step_id ";
+      join += " inner join flow.company_event_status_type on company_event_status_type.id = flow.project_process_step_event.company_event_status_type_id ";
+      join += " inner join flow.event_status_type on flow.event_status_type.id = flow.company_event_status_type.event_status_type_id ";
+    }
+
+    join += " inner join flow.company_process_step_status_type on flow.company_process_step_status_type.id = flow.project_process_step.company_process_step_status_type_id";
+    join += " inner join flow.process_step_status_type on flow.process_step_status_type.id = flow.company_process_step_status_type.process_step_status_type_id";
+    join += " inner join flow.process_step on process_step.id = project_process_step.process_step_id";
+
+    if (processStepId != null) {
+      // event and PS smartlists
+      join += " and process_step.id = " + processStepId;
+      join += " inner join \"projects\" on \"projects\".id = flow.project_process_step.project_id";
+      join += " inner join flow.project on flow.project.id = \"projects\".id";
+    } else {
+      // workqueue smartlists
+      join += " inner join flow.project on flow.project.id = flow.project_process_step.project_id";
+    }
+
+    join += " left join flow.user_position \"project_user_position\" on \"project_user_position\".id = flow.project.user_position_id";
+    join += " left join flow.user \"project_user\" on \"project_user\".id = \"project_user_position\".user_id";
+    join += " inner join flow.company_project_status_type on flow.company_project_status_type.id = flow.project.company_project_status_type_id";
+    join += " inner join flow.project_status_type on flow.project_status_type.id = flow.company_project_status_type.project_status_type_id";
+    join += " inner join flow.contact on flow.contact.id = flow.project.contact_id and flow.contact.archived is not true";
+    join += " left join flow.user_position \"contact_user_position\" on \"contact_user_position\".id = flow.contact.owner_user_position_id";
+    join += " left join flow.user \"contact_user\" on \"contact_user\".id = \"contact_user_position\".user_id";
+
+    return join;
+  }
+
+  public List<SmartlistFieldAssignment> getEventWorkqueueDefaultFields() {
+    var defaultFields = new ArrayList<SmartlistFieldAssignment>();
+    var projectName = new SmartlistFieldAssignment();
+    projectName.setName("Project Name");
+    defaultFields.add(projectName);
+    var event = new SmartlistFieldAssignment();
+    event.setName("Event Name");
+    defaultFields.add(event);
+    var eventStatus = new SmartlistFieldAssignment();
+    eventStatus.setName("Event Status");
+    defaultFields.add(eventStatus);
+    var psName = new SmartlistFieldAssignment();
+    psName.setName("Process Step Name");
+    defaultFields.add(psName);
+    var psStatus = new SmartlistFieldAssignment();
+    psStatus.setName("Process Step Status");
+    defaultFields.add(psStatus);
+    var daysInQueue = new SmartlistFieldAssignment();
+    daysInQueue.setName("Days In Queue");
+    defaultFields.add(daysInQueue);
+
+    return defaultFields;
+  }
+
+//  private String getCfgaValueTable(List<SmartlistFieldAssignment> fields, Long cfgaId) {
+//    String table = "";
+//
+//    try {
+//      table = fields.stream()
+//        .filter(f -> Objects.equals(f.getCustomFieldGroupAssignmentId(), cfgaId))
+//        .map(SmartlistFieldAssignment::getValueReferenceTable)
+//        .findFirst()
+//        .orElse(null);
+//
+//      if (table == null) {
+//        table = UUID.randomUUID().toString();
+//      }
+//    } catch (NullPointerException e) {
+//      table = UUID.randomUUID().toString();
+//    }
+//    return table;
+//  }
+
+  public static class SmartlistMapper<T> extends BeanPropertyRowMapper<T> {
+    private final ObjectMapper om;
+
+    public SmartlistMapper(Class<T> mappedClass, ObjectMapper objectMaper) {
+      super(mappedClass);
+      this.om = objectMaper;
+    }
+
+    @Override
+    protected void initBeanWrapper(BeanWrapper bw) {
+      TypeReference<List<ProcessStepEventWorkQueueType>> processStepEventWqtRef = new TypeReference<>() {};
+      bw.registerCustomEditor(List.class, "eventWorkQueueTypes", new JsonCollectionDeserializer(processStepEventWqtRef, om));
+    }
+  }
+
   public static class SmartlistRequirementMapper<T> extends BeanPropertyRowMapper<T> {
     private final ObjectMapper om;
 
@@ -2590,8 +3281,8 @@ public class SmartlistService {
       TypeReference<List<ListOfValue>> availableListOfValuesRef = new TypeReference<>() {};
       bw.registerCustomEditor(List.class, "availableListOfValues", new JsonCollectionDeserializer(availableListOfValuesRef, om));
 
-        TypeReference<CustomField> customFieldRef = new TypeReference<>() {};
-        bw.registerCustomEditor(Object.class, "customField", new JsonCollectionDeserializer(customFieldRef, om));
+      TypeReference<CustomField> customFieldRef = new TypeReference<>() {};
+      bw.registerCustomEditor(Object.class, "customField", new JsonCollectionDeserializer(customFieldRef, om));
     }
   }
 
